# chameleon-protocol

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: new_manifest.md
.github/workflows/: pr_checks.yml  validate_manifests.yml
chameleon_adaptor/lib/: main.dart
chameleon_adaptor/screens/: dashboard_screen.dart  device_list_screen.dart  ledger_screen.dart  safety_screen.dart
chameleon_certify/: cli.py
chameleon_certify/specs/: toaster_spec.json
chameleon_docs/specs/: chameleon_manifest_spec.md
chameleon_experiments/karpathy_test/: README.md  chameleon_karpathy_test.py  goals.md  isaac_lab_kettle_experiment.py  mock_server.py  requirements.txt
chameleon_hub/api/: certify.py  main.py  requirements.txt
chameleon_hub/blockchain/: ledger_config.json
chameleon_hub/config/: safety_config.json
chameleon_hub/docker/: Dockerfile  docker-compose.yml
chameleon_hub/web/: certified.html
chameleon_library/bathroom/: bath_towel_manifest.json  hairdryer_manifest.json  shower_curtain_manifest.json  soap_dispenser_manifest.json  toothbrush_manifest.json  towel_rail_manifest.json
chameleon_library/bedroom/: alarm_clock_manifest.json  bedside_table_manifest.json  blanket_manifest.json  clothes_hanger_manifest.json  pillow_manifest.json  reading_lamp_manifest.json
chameleon_library/garden/: garden_hose_manifest.json  trowel_manifest.json  (+1 more)
chameleon_ros2/: README.md  package.xml  setup.py
chameleon_ros2/config/: chameleon_params.yaml
chameleon_ros2/launch/: chameleon_launch.py
chameleon_ros2/src/: chameleon_node.py  mycobot_adapter.py
(+40 files in other folders)
