<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chameleon_ros2</name>
  <version>1.0.0</version>
  <description>
    Chameleon Protocol ROS2 bridge.
    Connects humanoid robot arms (myCobot 280, UR5e, Unitree G1)
    to the Chameleon manifest protocol for safe, manifest-driven
    object interaction.
  </description>

  <maintainer email="RenLesApps@outlook.com">David Qicatabua</maintainer>
  <license>Apache-2.0</license>

  <author email="RenLesApps@outlook.com">David Qicatabua</author>
  <url type="repository">https://github.com/RenLes/chameleon-protocol</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>action_msgs</depend>
  <depend>robot_state_publisher</depend>

  <exec_depend>python3-httpx</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
